# model-radar

./: .gitignore  CLAUDE.md  FREE_MODELS_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LIVE_MODELS.md  PLAN.md  README.md  SQLITE_FEATURE.md  config.example.json  pyproject.toml  server.json
.claude/skills/benchmarking/: SKILL.md
.claude/skills/provider-setup/: SKILL.md
.claude/skills/release/: SKILL.md
docs/: architecture.md  mcp-transport.md  playbook-llm-as-judge.md  playbook-translation-pipeline.md
src/model_radar/: availability_check.py  benchmark.py  check_free.py  cli.py  config.py  consensus.py  db.py  endpoints.py  guides.py  host_swap.py  judge.py  ping_test.py  provider_sync.py  providers.py  quality.py  runner.py  scanner.py  server.py  setup_workflow.py  text_utils.py  web.py
tests/: test_benchmark.py  test_config.py  test_consensus.py  test_db.py  test_endpoints.py  test_get_workers.py  test_guides.py  test_judge.py  test_provider_sync.py  test_providers.py  test_quality.py  test_runner.py  test_scanner.py  test_server.py  test_text_utils.py  test_web.py
