[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-radar"
version = "0.1.0"
description = "MCP server that pings free coding LLM models across 17 providers in real-time, ranks by latency, and helps AI agents pick the fastest available model."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Gig8 LLC" }]
keywords = [
    "mcp", "mcp-server", "llm", "free-models", "nvidia-nim",
    "groq", "cerebras", "openrouter", "coding-models",
    "latency", "model-selection", "ai-agents", "claude-code",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp>=1.26.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.9.0",
]

[project.scripts]
model-radar = "model_radar.cli:main"

[project.urls]
Homepage = "https://github.com/srclight/model-radar"
Repository = "https://github.com/srclight/model-radar"
Issues = "https://github.com/srclight/model-radar/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/model_radar"]

[tool.hatch.build.targets.sdist]
include = ["src/model_radar", "README.md", "LICENSE"]
